--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>AD-02 LAB - Interacción con HTML, CSS y JS</title>
+  <link rel="stylesheet" href="style.css">
+
   
 </head>
 
 <body>
 
-  
-  
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+  <!-- Encabezados requeridos -->
+  <h1 id="red">Hola Mundo</h1>
+  <h1 class="blue">Hola Mundo</h1>
+  <h1>Hola Mundo</h1>
+  <h1 class="blue">Hola Mundo</h1>
+  <h1>Hola Mundo</h1>
+
+  <!-- Imagen desde la carpeta Imagenes -->
+  <img src="Pictures/X - Xbox.jpg" alt="Imagen de ejemplo" width="300" />
+
+
+<script src="script.js"></script>
+
 </body>
 
 </html>
